Update primogenitor, dependencies, move test sources root.